jenkins_ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-web
  namespace: jenkins
  annotations:
   nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  rules:
  - host: jenkins.qq.com
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
        path: /
